<resources>
    <string name="app_name">Chatuna</string>
    <string name="history">ისტორია</string>
    <string name="please_wait">გთხოვთ დაელოდოთ</string>
    <string name="cancel">გაუქმება</string>
    <string name="chat">ჩატი</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="history_empty">ისტორია ცარიელია</string>
    <string name="chat">ჩატი</string>
    <string name="history">ისტორია</string>
</resources>
